--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  <p *ngFor="let message of messages">{{message.message}}</p>
-</h1>
+<app-nav></app-nav>
+<div class="container-fluid">
+  <!--<div class="col-md-4">-->
+    <!--<app-sidemenu></app-sidemenu>-->
+  <!--</div>-->
+  <!--<div class="col-md-9">-->
+    <app-chat class="container"></app-chat>
+  <!--</div>-->
+</div>
+
+<app-footer></app-footer>
