--- a/src/app/chat/message/message.component.css
+++ b/src/app/chat/message/message.component.css
@@ -1,14 +1,31 @@
 .chatMessage {
-  width: 50em;
-  margin-bottom: 1em;
-  background-color: #f4f4f4;
-  border: 2px solid #a7a7a7;
+  margin-bottom: 0.5em;
+  border: 2px solid #b1b1b1;
   border-radius: 5px;
 }
+
+.avatar-box {
+  /*border-right: 1px dotted #a7a7a7;*/
+}
+
+
 .avatar {
-  opacity: 0.3;
+  opacity: 0.6;
+  margin-top: 0.9em;
+  margin-bottom: 0.9em;
+  width: 5em;
+  box-shadow: 2px 2px 6px #424242;
 }
 
 .message-upper {
-  border-bottom: 1px solid #a7a7a7;
+  border-bottom: 1px dotted #a7a7a7;
+}
+
+.message-lower {
+  background-color: #f9f9f9;
+
+}
+
+.float-right {
+  float: right;
 }
