--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -4,6 +4,6 @@
   width: 100%;
   height: 60px;
   line-height: 60px;
-  background-color: #a1b4f5;
+  background-color: #a7a7a7;
   text-align: center;
 }
