--- a/src/app/chat/message/message.component.css
+++ b/src/app/chat/message/message.component.css
@@ -1,7 +1,7 @@
 .chatMessage {
   margin-bottom: 0.5em;
   border: 2px solid #b1b1b1;
-  border-radius: 5px;
+  border-radius: 7px;
 }
 
 .avatar-box {
@@ -10,11 +10,15 @@
 
 
 .avatar {
-  opacity: 0.6;
+  opacity: 0.5;
   margin-top: 0.9em;
   margin-bottom: 0.9em;
-  width: 5em;
+  width: 4.5em;
   box-shadow: 2px 2px 6px #424242;
+}
+
+.avatar:hover {
+  opacity: 1;
 }
 
 .message-upper {
@@ -23,7 +27,7 @@
 
 .message-lower {
   background-color: #f9f9f9;
-
+  border-radius: 7px;
 }
 
 .float-right {
