--- a/src/app/chat/message/message.component.html
+++ b/src/app/chat/message/message.component.html
@@ -5,14 +5,17 @@
       <!--<img src="http://placehold.it/100x100" class="img-rounded img-responsive ">-->
     </div>
     <div class="col-md-6">
+      <div class="row ">
+        <h5 class="float-right">{{message.timestamp | date:'M/d/yyyy HH:mm'}}</h5>
+      </div>
       <p>{{message.message}}</p>
-      <p>{{message.timestamp | date:'M/d/yyyy HH:mm'}}</p>
       <!--<pre>{{message | json}}</pre>-->
     </div>
   </div>
   <div class="row message-lower">
-    <p>{{message.replies.length}}</p>
-    <button type="button" class="btn btn-link float-right" (click)="deleteMessage(message.id);">
+    <!--<p>{{message.replies.length}}</p>-->
+    <button type="button" class="btn btn-link float-right"
+            (click)="deleteMessage(message.id);">
       <span class="glyphicon glyphicon-trash glyph"></span>
     </button>
     <button type="button" class="btn btn-link float-right" (click)="onClickEdit(message)">
@@ -22,15 +25,15 @@
       <span class="glyphicon glyphicon-plus glyph"></span>
     </button>
   </div>
-<div class="container" *ngIf="edit">
-  <form ngForm>
-      <textarea class="form-control container" rows="5" name="message" required [(ngModel)]="messageContainer.message"
-                placeholder="add comment..."></textarea>
-    <button type="submit" class="btn btn-success btn-sm" [disabled]="!messageContainer.message"
-            (click)="replyMessage(message.id);">
-      <span class="glyphicon glyphicon-send glyph"></span> Post
-    </button>
-  </form>
-</div>
+  <div class="" *ngIf="edit">
+    <form ngForm>
+      <textarea class="form-control" rows="3" name="message" required [(ngModel)]="messageContainer.message"
+                placeholder="add reply..."></textarea>
+      <button type="submit" class="btn btn-success btn-sm" [disabled]="!messageContainer.message"
+              (click)="replyMessage(message.id);">
+        <span class="glyphicon glyphicon-send glyph"></span> Post
+      </button>
+    </form>
+  </div>
 </div>
 
