--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,9 @@
 .footer {
   position: absolute;
-  bottom: 0;
+  /*bottom: 0;*/
   width: 100%;
-  height: 60px;
+  height: 40px;
   line-height: 60px;
-  background-color: #a7a7a7;
+  background-color: #404040;
   text-align: center;
 }
