--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,15 @@
-<div >
+<div class="footer container-fluid">
+  <div class="row ">
 
-<p class="footer">
-
-</p>
+  <div class="col-md-12 col-sm-12">
+    <div class="col-md-2 col-sm-0"></div>
+    <span class="col-md-4 col-sm-6" style="color: #f9f9f9">View client code on
+      <a href="https://github.com/paullachenardiere/alten-chat-client-ng2">Github</a>
+    </span>
+    <span class="col-md-4 col-sm-6" style="color: #f9f9f9">View backend code on
+      <a href="https://github.com/paullachenardiere/alten-chat">Github</a>
+    </span>
+    <div class="col-md-2 col-sm-0"></div>
+  </div>
+  </div>
 </div>
