--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body {
   /*padding-top: 0rem;*/
   /*margin-bottom: 60px;*/
+  /*transition:  background 1.2s ease!important;*/
 }
 
 html {
@@ -11,4 +12,8 @@ html {
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
+}
+.modal-backdrop {
+  /*transition: background 1s ease!important;*/
+  background: rgba(0, 0, 0, 0.7)!important;
 }
