--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
 <app-nav></app-nav>
-
-  <!--<div class="col-md-4">-->
-    <!--<app-sidemenu></app-sidemenu>-->
-  <!--</div>-->
-  <!--<div class="col-md-9">-->
-    <app-chat class="container"></app-chat>
-  <!--</div>-->
-
-
+<app-chat></app-chat>
 <app-footer></app-footer>
