--- a/src/app/chat/message/message.component.css
+++ b/src/app/chat/message/message.component.css
@@ -2,23 +2,59 @@
   margin-bottom: 0.5em;
   border: 2px solid #b1b1b1;
   border-radius: 7px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .avatar-box {
   /*border-right: 1px dotted #a7a7a7;*/
+
 }
 
-
 .avatar {
-  opacity: 0.5;
-  margin-top: 0.9em;
-  margin-bottom: 0.9em;
-  width: 4.5em;
-  box-shadow: 2px 2px 6px #424242;
+  opacity: 0.6;
+  margin-top: 4px;
+  margin-left: -11px;
+  margin-bottom: 2px;
+  width: 3.6em;
+  box-shadow: 1px 1px 3px #424242;
+  transition: opacity 0.5s ease-out;
 }
 
 .avatar:hover {
+  cursor: pointer;
+  transition: opacity 0s ease-out;
   opacity: 1;
+  box-shadow: 2px 3px 4px #424242;
+}
+
+.avatar:active {
+  box-shadow: 1px 1px 1px #424242;
+}
+
+.status {
+  margin: 0 0 4px -6px;
+  font-size: 0.8em;
+  display: flex;
+  color: #7e7e7e;
+}
+
+.statusIndicator {
+  background-color: #b3e06e;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  margin-top: 3px;
+  margin-left: 3px;
+}
+
+.timestamp {
+  /*padding-top: 3px;*/
+  padding-right: 6px;
+}
+
+.message {
+  padding-right: 40px;
 }
 
 .message-upper {
@@ -27,9 +63,55 @@
 
 .message-lower {
   background-color: #f9f9f9;
-  border-radius: 7px;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
+  height: 25px;
+  opacity: 0.5;
+  transition: opacity 0.1s ease-out;
+
+}
+
+.button-bar button {
+  outline: none;
+}
+
+.replies {
+  background-color: rgba(166, 207, 236, 0.41);
+  border-radius: 4px;
+  /*height: 22px;*/
+  /*color: #7e7e7e;*/
+}
+
+.replies:hover {
+  outline: none;
+  /*color: #d4d4d4;*/
+  cursor: pointer;
+
+}
+
+.chatMessage:hover > .message-lower {
+  transition: opacity ease-out;
+  opacity: 1;
+
+}
+
+.button-bar > button {
+  padding: 2px 6px;
+
 }
 
 .float-right {
   float: right;
+}
+
+.float-left {
+  float: left;
+}
+
+.red {
+  color: #b12f2d;
+}
+
+.no-padding {
+  padding: 0;
 }
