--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,18 @@
 .footer {
   position: absolute;
-  /*bottom: 0;*/
+  bottom: 0px;
   width: 100%;
-  height: 40px;
-  line-height: 60px;
+  margin-top: 5em;
+  max-height: 30px;
+  line-height: 28px;
   background-color: #404040;
   text-align: center;
+  font-size: 0.9em;
 }
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
