--- a/src/app/chat/message-body/message-body.component.html
+++ b/src/app/chat/message-body/message-body.component.html
@@ -1,6 +1,7 @@
 <div class="row message-upper">
   <div class="col-md-2 col-sm-2 col-xs-2 avatar-box">
-    <img (click)="userModal.show()" ngClass="{{message.parentId ? 'img-responsive' : ''}}" src="./assets/paul.jpg" alt="..." class="img-circle avatar">
+    <img (click)="userModal.show()" ngClass="{{message.parentId ? 'img-responsive center-block' : ''}}" src="./assets/paul.jpg"
+         alt="..." class="img-circle avatar">
     <p class="status">online <span><div class="statusIndicator"></div></span></p>
     <!--<img src="http://placehold.it/100x100" class="img-rounded img-responsive ">-->
   </div>
@@ -11,8 +12,13 @@
       </h5>
     </div>
     <!--<pre>{{message | json}}</pre>-->
-    <div class="row">
-      <p class="message">{{message.message}}</p>
+    <div class="row messageRow">
+      <p class="message">{{!viewFullMessage ? message.message.substring(0,150)+'...' : ''}}<span
+        *ngIf="viewFullMessage">{{message.message}}</span>
+        <span>
+          <button (click)="viewMessage()" *ngIf="message.message.length > 150" class="btn btn-link float-right">{{!viewFullMessage ? 'view...' : '...less'}}</button>
+        </span>
+      </p>
     </div>
 
   </div>
