--- a/src/app/chat/message/message.component.html
+++ b/src/app/chat/message/message.component.html
@@ -1,4 +1,5 @@
-<div class="chatMessage" id="{{message.id}}">
+<div class="chatMessage show" id="{{message.id}}"
+     ngClass="{{showReplies && message.replies.length > 0 ? 'expand' : 'collapse'}}">
   <!--<pre>{{message | json}}</pre>-->
 
   <message-body [message]="message"></message-body>
@@ -10,16 +11,20 @@
 
   <div class="" *ngIf="toggleInput">
     <form ngForm>
+      <!--<div class="col-md-2 col-sm-1"></div>-->
+      <!--<div class="col-md-8 col-sm-10 col-xs-12">-->
       <textarea class="form-control" rows="3" name="message" required
                 [(ngModel)]="messageContainer.message"
                 placeholder="add reply..."
                 (keyup.enter)="onEnter(message.id)">
 
       </textarea>
-      <button type="submit" class="btn btn-success btn-sm" [disabled]="!messageContainer.message"
-              (click)="submit(message.id)">
-        <span class="glyphicon glyphicon-send glyph"></span> {{edit ? 'Done' : 'Post'}}
-      </button>
+        <button type="submit" class="btn btn-success btn-sm float-right submit-btn" [disabled]="!messageContainer.message"
+                (click)="submit(message.id)">
+          <span class="glyphicon glyphicon-send glyph"></span> {{edit ? 'Done' : 'Post'}}
+        </button>
+      <!--</div>-->
+      <!--<div class="col-md-2 col-sm-1"></div>-->
     </form>
   </div>
 </div>
