--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -36,7 +36,9 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="#"><button type="button" class="btn btn-link no-padding settings">
+          <span class="glyphicon glyphicon-cog glyph" aria-label="Settings"></span>
+        </button></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
