--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,13 +1,13 @@
 .footer {
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
   margin-top: 5em;
   max-height: 30px;
   line-height: 28px;
   background-color: #404040;
   text-align: center;
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
 
 .center {
