--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,7 +1,8 @@
-
-<div class="col-md-3 col-sm-2"></div>
-<div class="col-md-6 col-sm-8 col-xs-12" >
-<chat-message class="" *ngFor="let message of messages" [message]="message"></chat-message>
+<div class="col-lg-4 col-md-3 col-sm-2"></div>
+<div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+  <span>Websocket is <strong>{{session ? session.type : ''}}</strong>.
+    Active sessions = <strong>{{activeSessions}}</strong></span>
+  <chat-message class="" *ngFor="let message of messages" [message]="message"></chat-message>
   <form class=" " ngForm>
       <textarea class="form-control" rows="3" name="message" required [(ngModel)]="newMessage.message"
                 placeholder="add comment...">
@@ -11,9 +12,9 @@
       <span class="glyphicon glyphicon-send glyph"></span> Post
     </button>
   </form>
-<div class="space-container"></div>
+  <div class="space-container"></div>
 </div>
-<div class="col-md-3 col-sm-2"></div>
+<div class="col-lg-4 col-md-3 col-sm-2"></div>
 
 
 
