--- a/src/app/chat/message-body/message-body.component.html
+++ b/src/app/chat/message-body/message-body.component.html
@@ -14,12 +14,14 @@
     </div>
     <!--<pre>{{message | json}}</pre>-->
     <div class="row">
-      <p class="message">{{!viewFullMessage ? message.message.substring(0,150) : ''}}
+      <p class="message" ngClass="{{!viewFullMessage && message.message.length > 150 ? 'overflow' : ''}}">
+        {{!viewFullMessage ? message.message.substring(0,150) : ''}}
         <span *ngIf="!viewFullMessage && message.message.length > 150">...</span>
         <span *ngIf="viewFullMessage">{{message.message}}</span>
         <span>
-          <button (click)="viewMessage()" *ngIf="message.message.length > 150" class="btn btn-link float-right">
-            {{!viewFullMessage ? 'more...' : 'less'}}
+          <button (click)="viewMessage()" *ngIf="message.message.length > 150" id="viewMore"
+                  class="btn btn-link float-right">
+            {{!viewFullMessage ? 'view more...' : 'view less'}}
           </button>
         </span>
       </p>
@@ -28,10 +30,10 @@
   </div>
 </div>
 <div class="row message-lower" *ngIf="!message.parentId">
-    <div name="button-bar" class="float-right button-bar">
+  <div name="button-bar" class="float-right button-bar">
     <button type="button" class="btn btn-link"
             *ngIf="message && message.replies"
-            (click)="onClickShowReplies()"
+            (click)="onClickShowReplies(message.id, 1)"
             ngClass="{{message.replies.length > 0 ? 'replies' : ''}}">
       <span class="comments">{{message.replies.length}} {{message.replies.length > 1 ? 'comments' : 'comment'}} </span>
       <span *ngIf="message.replies.length > 1">
@@ -39,9 +41,9 @@
         <span *ngIf="showReplies" class="glyphicon glyphicon-chevron-down glyph" aria-label="none"></span>
       </span>
     </button>
-    <button type="button" class="btn btn-link" (click)="onClickReply(message.id, 1)">
-      <span class="glyphicon glyphicon-plus glyph" aria-label="reply message"></span>
-    </button>
+    <!--<button type="button" class="btn btn-link" (click)="onClickReply(message.id, 1)">-->
+      <!--<span class="glyphicon glyphicon-plus glyph" aria-label="reply message"></span>-->
+    <!--</button>-->
     <button type="button" class="btn btn-link" (click)="onClickEdit(message)">
       <span class="glyphicon glyphicon-pencil glyph" aria-label="edit message"></span>
     </button>
@@ -66,12 +68,16 @@
 </delete-modal>
 
 <!--MODALS-->
-<user-modal>
+<user-modal id="user-modal">
   <div class="user-modal-header">
 
-
-    <img (click)="userModal.show()" src="./assets/paul.jpg" alt="..." class="img-circle">
-    <p class="status">online <span><div class="statusIndicator"></div></span></p>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xm-8">
+      <img (click)="userModal.show()" src="./assets/paul.jpg" alt="..." class="img-circle avatarXL">
+      <p class="status" id="user-modal-status">online <span><div class="statusIndicator"></div></span></p>
+    </div>
+    <div class="col-lg-9 col-md-8 col-sm-6 col-xm-4">
+      <h2  id="user-modal-username">{{message.user.userName}}</h2>
+    </div>
 
 
   </div>
