--- a/src/app/chat/modals/userModal.component.html
+++ b/src/app/chat/modals/userModal.component.html
@@ -9,9 +9,9 @@
       <div class="modal-body">
         <ng-content select=".user-modal-body"></ng-content>
       </div>
-      <div class="modal-footer">
-        <ng-content select=".user-modal-footer"></ng-content>
-      </div>
+      <!--<div class="modal-footer">-->
+        <!--<ng-content select=".user-modal-footer"></ng-content>-->
+      <!--</div>-->
     </div>
   </div>
 </div>
