--- a/src/app/chat/modals/warningModal.component.html
+++ b/src/app/chat/modals/warningModal.component.html
@@ -6,9 +6,9 @@
       <div class="modal-header" >
         <ng-content select=".warning-modal-header"></ng-content>
       </div>
-      <!--<div class="modal-body">-->
-        <!--<ng-content select=".warning-modal-body"></ng-content>-->
-      <!--</div>-->
+      <div class="modal-body">
+        <ng-content select=".warning-modal-body"></ng-content>
+      </div>
       <div class="modal-footer">
         <ng-content select=".warning-modal-footer"></ng-content>
       </div>
